
v2.4

 - Added option for lossless JPEG cropping
 - Tweaked some info text in settings

v2.3

 - Added setting for default aspect ratio (Thanks @rgronberg)
 - Added Russian translation (Thanks @Altizo)
 - Fixed importing grayscale images not working

v2.2

 - Fixed minimum window size
 - Added Spanish translation (Thanks @rednatnas)
 - Added Turkish translation (Thanks @libreajans)

v2.1

 - Added circle output mode
 - Added Italian translation (Thanks @musiclover382)
 - Redesigned preferences dialog (Thanks @rafaelmardojai)
 - Fixed some issues with the about dialog

v2.0

 - Ported framework to GTK4 + Libadwaita
 - Ported canvas to hardware accelerated backend
 - Added new theme colour "Pinku"
 - Added theme selector in settings
 - Added circle guide in crop selection
 - Added option for custom ratio lock and source crop size
 - Added slow resize for dragging corners
 - Fixed compatibility with some grayscale PNGs
 - Changed crop selection behavior to not reset size on reload

v1.7

 - Added image preview to file chooser (thanks @Sierra410)
 - Added rectangle position adjustment using arrow keys
 - Restored grayscale filter option

v1.6

 - Improved small crop region selection

v1.5

 - Added setting for "quick export" to Pictures or Overwrite
 - Moved "add thumbnail" setting to new preferences dialog
 - Removed grayscale filter

v1.4

 - Added multiple preview functionality
 - Added keyboard shortcut to enable free rectangle mode (Ctrl)
 - Moved circle preview toggle to context menu
 - Moved slow drag key from Ctrl to Shift
 - Improved rotation
   - Thumbnail now updates when dragging
   - Fixed slider direction
   - Restricted to 180 degree range

v1.3

 - Added "Discard EXIF" option
 - Added crop toggle to header bar
 - Fixed export dimension indicator when crop disabled

v1.2

 - Added new app icon
 - Added custom downscale entry
 - Fixed click preview to switch to circle not working on first click
 - Fixed and changed 1500 downscale value to 1920

v1.1
